--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "resetMocks": false
   },
   "scripts": {
-    "start": "PORT=8081 react-scripts start",
+    "start": "npm start",
     "build": "react-scripts build",
-    "test": "react-scripts test --json --outputFile=testReport.json --watchAll=false",
+    "test": "(eslint lib || true) && jest",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
